add varun button change commit

--- a/index.html
+++ b/index.html
@@ -313,10 +313,10 @@
 
                         <div class="form-actions">
                             <button type="button" class="btn btn-prev" onclick="switchTab(1)">← Previous</button>
-                            <button type="submit" class="btn btn-submit"
-                            style="padding:15px 40px; font-size:18px; border-radius:8px;">
-                        Pay Now
-                    </button>                        </div>
+<button type="submit" class="btn btn-submit"
+        style="padding:15px 40px; font-size:18px; border-radius:8px;">
+    Pay Now
+</button>                        </div>
                     </form>
                 </div>
             </div>
@@ -486,6 +486,17 @@
            The spirit of <span>Giving Back</span>
         </h2>
         <div class="slides">
+            <!-- Slide 3 -->
+            <div class="slide">
+                <div class="card">
+                    <img src="varun.jpg" class="profile">
+                    <h2>Mr. Varun Mishra</h2>
+                    <p class="sub">(Y6, CSE Btech-MTech dual )</p>
+                    <p class="quote">
+                        "MAGIK is a great initiative for younger alumni to contribute towards the needs of IITK students through monthly contributions. While lump-sum donations are aimed at big projects/scholarships, MAGIK helps cast a wider net and makes alumni like me feel connected to the community and experience the joy of giving back to our beloved Alma Mater. "
+                    </p>
+                </div>
+            </div>
             <!-- Slide 1 -->
             <div class="slide">
                 <div class="card">
